# edsm-pyspark

./: .gitattributes  .gitignore  00_INIT_FILES.ipynb  00_RESET.ipynb  00_job_settings.ipynb  01_job_settings.ipynb  01_rebuild_init_files.ipynb  01_sanity_check.ipynb  02_ingest.ipynb  02_sanity_check.ipynb  03_ingest.ipynb  05_ingest.ipynb  06_bad_records.ipynb  06_history.ipynb  08_optimize_and_vacuum.ipynb  09_erase_landing_zone.ipynb  99_SCRATCH001.ipynb  99_SCRATCH002.ipynb  99_WIDGET001.ipynb  99_WIDGET002.ipynb  MANIFEST.in  README.md  edsm-git.json  edsm-workspace.json  edsm.json  job-definition.yaml  pyproject.toml  workspace-edsm.json
airflow_dags/: edsm_pipeline.py
dashboards/: Python_nearestBySystemState.ipynb  SQL_powerPlay_File_Tracker.ipynb  nearest_by_system_state.py  powerplay_file_tracker.py  stations_file_tracker.py
doc/: downloader.md
docs/: run_airflow_pipeline.md
functions/: __init__.py  config.py  dq_checks.py  history.py  job.py  pipeline_functions.py  project_root.py  quality.py  read.py  rescue.py  sanity.py  temporal_functions.py  transform.py  transform_functions.py  upsert_operations.py  utility.py  utility_functions.py  write.py
jobs/: edsm-workflow.json  workspace-edsm-history.json  workspace-edsm.json
layer_01_bronze/: __init__.py  bodies7days.json  codex.json  edsm_bronze_load.py  edsm_bronze_pipeline.py  edsm_bronze_read.py  edsm_bronze_transform.py  edsm_bronze_write.py  powerPlay.json  powerPlay.py  stations.json  systemsPopulated.json  systemsWithCoordinates.json  systemsWithCoordinates7days.json  update_keys.ipynb  (+1 more)
(+144 files in other folders)
