[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "edsm"
version = "0.0.0"
description = "EDSM Delta Pipeline"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pyspark",
    "requests"
]

[project.scripts]
edsm-ingest = "scripts.ingest:main"

[tool.setuptools.packages.find]
include = ["functions"]

